syntax = "proto3";

import "google/protobuf/any.proto";

package greet;

message ClientMessageWS {
  string action = 1;
  google.protobuf.Any body = 2;
}

message HelloRequest {
  string Name = 1;
}

message HelloReply {
  string Message = 1;
}
